# Packager

./: .eslintrc.cjs  .gitignore  LICENSE  dev-app-update.yml  electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.mjs
.github/workflows/: release.yml
electron/main/: index.js  index.ts  update.js
public/: splash.html
src/: App.jsx  App.tsx  index.css  main.jsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Countdown.jsx  Modal.jsx  Navbar.jsx  ProgressBar.jsx  UpdateModal.jsx
src/components/update/: index.jsx  index.tsx
src/components/update/Modal/: index.jsx  modal.css
src/components/update/Progress/: index.jsx
