[package]
name = "packager"
version = "0.0.0"
description = "Packager"
authors = ["Marc Correale"]
license = "MIT"
repository = "https://github.com/lambor590/Packager"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = ["updater", "shell-open"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
